# learn-double-pendulum

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
